# cardano-markets-tracker

./: .gitignore  Dockerfile  Dockerfile.local  cabal.project  config.dhall.template  default.nix  docker-compose.yaml  entrypoint.sh  generate-config.sh  release.nix  run.sh  shell.nix
.github/workflows/: cardano-markets-tracker.yml
nix/: default.nix
nix/pkgs/haskell/: haskell.nix
scripts/: deposit.uplc  pool.uplc  redeem.uplc  swap.uplc
streaming-kafka/: streaming-kafka.cabal
streaming-kafka/src/Streaming/: Class.hs  Consumer.hs  Events.hs  Throw.hs
tracker/: tracker.cabal
tracker/app/: Main.hs
tracker/resources/: config.dhall
tracker/src/Tracker/: App.hs
tracker/src/Tracker/Caches/: Cache.hs
tracker/src/Tracker/Models/: AppConfig.hs  ExecutedOrders.hs  OnChainEvent.hs  SettledTx.hs
tracker/src/Tracker/Models/Events/: AnyEOrder.hs  Class.hs  ExecutedOrderEvent.hs  PoolEvent.hs
tracker/src/Tracker/Models/Interop/: Class.hs  Orders.hs  Pool.hs  Wrappers.hs
tracker/src/Tracker/Programs/: TrackerProgram.hs
tracker/src/Tracker/Services/: ConfigReader.hs  Tracker.hs
tracker/src/Tracker/Syntax/: Option.hs  Retry.hs
