cabal-version:      2.4
name:               tracker
version:            0.1.0.0

author:             spectrum
maintainer:         

extra-source-files: CHANGELOG.md

source-repository head
  type: git
  location: https://github.com/ergolabs/cardano-markets-tracker

common base
  build-depends: base >= 4.9 && < 5

common project-config
  default-language:     Haskell2010

  default-extensions:   OverloadedStrings
                        DeriveAnyClass
                        BangPatterns
                        BinaryLiterals
                        ConstraintKinds
                        DataKinds
                        DefaultSignatures
                        DeriveDataTypeable
                        DeriveFoldable
                        DeriveFunctor
                        DeriveGeneric
                        DeriveTraversable
                        DoAndIfThenElse
                        EmptyDataDecls
                        ExistentialQuantification
                        FlexibleContexts
                        FlexibleInstances
                        FunctionalDependencies
                        GADTs
                        GeneralizedNewtypeDeriving
                        InstanceSigs
                        KindSignatures
                        LambdaCase
                        MultiParamTypeClasses
                        MultiWayIf
                        NamedFieldPuns
                        NoImplicitPrelude
                        PartialTypeSignatures
                        OverloadedStrings
                        PatternGuards
                        PolyKinds
                        RankNTypes
                        RecordWildCards
                        ScopedTypeVariables
                        StandaloneDeriving
                        TupleSections
                        TypeFamilies
                        TypeSynonymInstances
                        TypeApplications
                        ViewPatterns

  ghc-options:          -Wall
                        -Wcompat
                        -Wincomplete-record-updates
                        -Wincomplete-uni-patterns
                        -Wpartial-fields
                        -Wredundant-constraints
                        -Wunused-packages
                        -Widentities
                        -fobject-code -fno-ignore-interface-pragmas -fno-omit-interface-pragmas

library
    import: base, project-config

    hs-source-dirs: src
    
    exposed-modules: 

    build-depends:  hashable        == 1.3.0.0
                  , dex-core        == 0.1.0.0
                  , quickblue       == 0.1.0.0
                  , exceptions      == 0.10.4
                  , resourcet       == 1.2.4.3
                  , unliftio-core   == 0.2.0.1
                  , transformers    == 0.5.6.2
                  , hedis           == 0.14.4
                  , utf8-string     == 1.0.2
                  , bytestring
                  , rio
                  , text
                  , bytestring
                  , streamly
                  , hw-kafka-client
                  , dhall
                  , hlog
                  , retry
                  , streaming-kafka
